Control logs to show only info from test